--- a/cliente/static/css/base.css
+++ b/cliente/static/css/base.css
@@ -1,3 +1,13 @@
 h1 a {
     color: #FCA205;
 }
+
+input[type="radio"] {
+    margin-left:10px;
+}
+.clearBoth {
+    clear:both;
+}
+.currencyFloat {
+    step=0.05;
+}
