--- a/cliente/templates/cliente/base.html
+++ b/cliente/templates/cliente/base.html
@@ -146,7 +146,7 @@
         </defs>
       </svg>
     <script>
-        var url = "{% static 'json/master.json' %}";
+        var url = "{% static 'json/car_master_resumed.json' %}";
     </script>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
